css and emoji's

--- a/upload/css/css.css
+++ b/upload/css/css.css
@@ -8995,126 +8995,126 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text {
 .reaction--1 .reaction-sprite {
     width: 32px;
     height: 32px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px 0px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px 0px;
     background-size: 100%
 }
 
 .reaction--small.reaction--1 .reaction-sprite {
     width: 16px;
     height: 16px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px 0px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px 0px;
     background-size: 100%
 }
 
 .reaction--medium.reaction--1 .reaction-sprite {
     width: 21px;
     height: 21px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px 0px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px 0px;
     background-size: 100%
 }
 
 .reaction--2 .reaction-sprite {
     width: 32px;
     height: 32px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px -32px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -32px;
     background-size: 100%
 }
 
 .reaction--small.reaction--2 .reaction-sprite {
     width: 16px;
     height: 16px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px -16px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -16px;
     background-size: 100%
 }
 
 .reaction--medium.reaction--2 .reaction-sprite {
     width: 21px;
     height: 21px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px -21px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -21px;
     background-size: 100%
 }
 
 .reaction--3 .reaction-sprite {
     width: 32px;
     height: 32px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px -64px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -64px;
     background-size: 100%
 }
 
 .reaction--small.reaction--3 .reaction-sprite {
     width: 16px;
     height: 16px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px -32px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -32px;
     background-size: 100%
 }
 
 .reaction--medium.reaction--3 .reaction-sprite {
     width: 21px;
     height: 21px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px -42px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -42px;
     background-size: 100%
 }
 
 .reaction--4 .reaction-sprite {
     width: 32px;
     height: 32px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px -96px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -96px;
     background-size: 100%
 }
 
 .reaction--small.reaction--4 .reaction-sprite {
     width: 16px;
     height: 16px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px -48px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -48px;
     background-size: 100%
 }
 
 .reaction--medium.reaction--4 .reaction-sprite {
     width: 21px;
     height: 21px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px -63px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -63px;
     background-size: 100%
 }
 
 .reaction--5 .reaction-sprite {
     width: 32px;
     height: 32px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px -128px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -128px;
     background-size: 100%
 }
 
 .reaction--small.reaction--5 .reaction-sprite {
     width: 16px;
     height: 16px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px -64px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -64px;
     background-size: 100%
 }
 
 .reaction--medium.reaction--5 .reaction-sprite {
     width: 21px;
     height: 21px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px -84px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -84px;
     background-size: 100%
 }
 
 .reaction--6 .reaction-sprite {
     width: 32px;
     height: 32px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px -160px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -160px;
     background-size: 100%
 }
 
 .reaction--small.reaction--6 .reaction-sprite {
     width: 16px;
     height: 16px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px -80px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -80px;
     background-size: 100%
 }
 
 .reaction--medium.reaction--6 .reaction-sprite {
     width: 21px;
     height: 21px;
-    background: url('styles/default/xenforo/reactions/emojione/sprite_sheet_emojione.png') no-repeat 0px -105px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -105px;
     background-size: 100%
 }
 
@@ -9215,84 +9215,84 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text {
 .smilie--sprite.smilie--sprite1 {
     width: 22px;
     height: 22px;
-    background: url('styles/default/xenforo/smilies/emojione/sprite_sheet_emojione.png') no-repeat 0px 0px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px 0px;
     background-size: 100%
 }
 
 .smilie--sprite.smilie--sprite2 {
     width: 22px;
     height: 22px;
-    background: url('styles/default/xenforo/smilies/emojione/sprite_sheet_emojione.png') no-repeat 0px -176px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -176px;
     background-size: 100%
 }
 
 .smilie--sprite.smilie--sprite3 {
     width: 22px;
     height: 22px;
-    background: url('styles/default/xenforo/smilies/emojione/sprite_sheet_emojione.png') no-repeat 0px -264px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -264px;
     background-size: 100%
 }
 
 .smilie--sprite.smilie--sprite4 {
     width: 22px;
     height: 22px;
-    background: url('styles/default/xenforo/smilies/emojione/sprite_sheet_emojione.png') no-repeat 0px -66px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -66px;
     background-size: 100%
 }
 
 .smilie--sprite.smilie--sprite8 {
     width: 22px;
     height: 22px;
-    background: url('styles/default/xenforo/smilies/emojione/sprite_sheet_emojione.png') no-repeat 0px -22px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -22px;
     background-size: 100%
 }
 
 .smilie--sprite.smilie--sprite5 {
     width: 22px;
     height: 22px;
-    background: url('styles/default/xenforo/smilies/emojione/sprite_sheet_emojione.png') no-repeat 0px -154px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -154px;
     background-size: 100%
 }
 
 .smilie--sprite.smilie--sprite6 {
     width: 22px;
     height: 22px;
-    background: url('styles/default/xenforo/smilies/emojione/sprite_sheet_emojione.png') no-repeat 0px -44px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -44px;
     background-size: 100%
 }
 
 .smilie--sprite.smilie--sprite7 {
     width: 22px;
     height: 22px;
-    background: url('styles/default/xenforo/smilies/emojione/sprite_sheet_emojione.png') no-repeat 0px -132px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -132px;
     background-size: 100%
 }
 
 .smilie--sprite.smilie--sprite9 {
     width: 22px;
     height: 22px;
-    background: url('styles/default/xenforo/smilies/emojione/sprite_sheet_emojione.png') no-repeat 0px -242px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -242px;
     background-size: 100%
 }
 
 .smilie--sprite.smilie--sprite10 {
     width: 22px;
     height: 22px;
-    background: url('styles/default/xenforo/smilies/emojione/sprite_sheet_emojione.png') no-repeat 0px -220px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -220px;
     background-size: 100%
 }
 
 .smilie--sprite.smilie--sprite11 {
     width: 22px;
     height: 22px;
-    background: url('styles/default/xenforo/smilies/emojione/sprite_sheet_emojione.png') no-repeat 0px -110px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -110px;
     background-size: 100%
 }
 
 .smilie--sprite.smilie--sprite12 {
     width: 22px;
     height: 22px;
-    background: url('styles/default/xenforo/smilies/emojione/sprite_sheet_emojione.png') no-repeat 0px -308px;
+    background: url('http://gta-assets.knfh.gq/upload/sprite_sheet_emojione.png') no-repeat 0px -308px;
     background-size: 100%
 }
 
@@ -9447,7 +9447,7 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text {
     font-family: 'Font Awesome 5 Duotone';
     font-style: normal;
     font-weight: 900;
-    src: url('styles/fonts/fa/fa-duotone-900.woff2?_v=5.12.0') format('woff2'),url('styles/fonts/fa/fa-duotone-900.woff?_v=5.12.0') format('woff')
+    src: url('http://gta-assets.knfh.gq/upload/fonts/fa-duotone-900.woff2?_v=5.12.0') format('woff2'),url('http://gta-assets.knfh.gq/upload/fonts/fa-duotone-900.woff?_v=5.12.0') format('woff')
 }
 
 .fad {
@@ -16768,7 +16768,7 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text {
     font-family: 'Font Awesome 5 Pro';
     font-style: normal;
     font-weight: 300;
-    src: url('styles/fonts/fa/fa-light-300.woff2?_v=5.12.0') format('woff2'),url('styles/fonts/fa/fa-light-300.woff?_v=5.12.0') format('woff')
+    src: url('http://gta-assets.knfh.gq/upload/fonts/fa-light-300.woff2?_v=5.12.0') format('woff2'),url('http://gta-assets.knfh.gq/upload/fonts/fa-light-300.woff?_v=5.12.0') format('woff')
 }
 
 .fal {
@@ -16785,7 +16785,7 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text {
     font-family: 'Font Awesome 5 Pro';
     font-style: normal;
     font-weight: 400;
-    src: url('styles/fonts/fa/fa-regular-400.woff2?_v=5.12.0') format('woff2'),url('styles/fonts/fa/fa-regular-400.woff?_v=5.12.0') format('woff')
+    src: url('http://gta-assets.knfh.gq/upload/fonts/fa-regular-400.woff2?_v=5.12.0') format('woff2'),url('http://gta-assets.knfh.gq/upload/fonts/fa-regular-400.woff?_v=5.12.0') format('woff')
 }
 
 .far {
@@ -16802,7 +16802,7 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text {
     font-family: 'Font Awesome 5 Pro';
     font-style: normal;
     font-weight: 900;
-    src: url('styles/fonts/fa/fa-solid-900.woff2?_v=5.12.0') format('woff2'),url('styles/fonts/fa/fa-solid-900.woff?_v=5.12.0') format('woff')
+    src: url('http://gta-assets.knfh.gq/upload/fonts/fa-solid-900.woff2?_v=5.12.0') format('woff2'),url('http://gta-assets.knfh.gq/upload/fonts/fa-solid-900.woff?_v=5.12.0') format('woff')
 }
 
 .fa,.fas {
@@ -16819,7 +16819,7 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text {
     font-family: 'Font Awesome 5 Brands';
     font-style: normal;
     font-weight: 400;
-    src: url('styles/fonts/fa/fa-brands-400.woff2?_v=5.12.0') format('woff2'),url('styles/fonts/fa/fa-brands-400.woff?_v=5.12.0') format('woff')
+    src: url('http://gta-assets.knfh.gq/upload/fonts/fa-brands-400.woff2?_v=5.12.0') format('woff2'),url('http://gta-assets.knfh.gq/upload/fonts/fa-brands-400.woff?_v=5.12.0') format('woff')
 }
 
 .fab {
@@ -26190,7 +26190,7 @@ a.reaction:hover .reaction-text,a.reaction:focus .reaction-text {
 
 .p-header {
     color: #F5F7FA;
-    background: #1f2933 url("https://gta-assets.nopixel.net/brand/nopixel-forum-header-bg.jpeg");
+    background: #c300ff url("");
     background-size: cover;
     background-repeat: no-repeat
 }
